# MoneyExchangeCalc

./: .gitignore  Cargo.toml  README.md
src/: README.md  main.rs  utils.rs
