[package]
name = "MoneyExchangeCalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.99", features = ["derive"]}
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0"