[package]
name = "money_exchange_calc_cli"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.99", features = ["derive"]}
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }